force-app/main/default/objects/Orga_HE__c/fields/Dispatch_Inv_Hierarchy_Starting_Point__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Inv_Hierarchy_Starting_Point__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Start point for invoice dispatch (hierarchy dispatch invoice level)</inlineHelpText>
    <label>Dispatch Inv - Hierarchy Starting Point</label>
    <type>Checkbox</type>
</CustomField>