force-app/main/default/objects/Orga_HE__c/fields/Elt_Code__c.field-meta.xml
<CustomField>
    <fullName>Elt_Code__c</fullName>
    <description>Element number</description>
    <externalId>true</externalId>
    <inlineHelpText>Code unique de l&apos;élément</inlineHelpText>
    <label>Elt Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>