force-app/main/default/objects/Orga_HE__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <description>Full name of the element</description>
    <inlineHelpText>Specify the full name of the element</inlineHelpText>
    <label>Full Name</label>
    <type>TextArea</type>
</CustomField>