force-app/main/default/objects/Orga_HE__c/fields/Long_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Long_Name_1__c</fullName>
    <formula>CASE( Level__c, 
0, Name, 
1, Name, 
2, Name, 
3, Parent_Element__r.Name &amp; &apos; - &apos; &amp; Name, 
4, Parent_Element__r.Parent_Element__r.Name &amp; &apos; - &apos; &amp; Name, 
&apos;..&apos; &amp; Name)</formula>
    <label>Long Name 1</label>
    <type>Text</type>
</CustomField>