force-app/main/default/objects/Orga_HE__c/fields/Long_Name__c.field-meta.xml
<CustomField>
    <fullName>Long_Name__c</fullName>
    <formula>CASE( Level__c, 
0, Name, 
1, Name, 
2,  Parent_Element__r.Name &amp; &apos; - &apos; &amp; Name, 
3,  Parent_Element__r.Parent_Element__r.Name  &amp; &apos; - &apos; &amp; Parent_Element__r.Name &amp; &apos; - &apos; &amp; Name, 
4,   Parent_Element__r.Parent_Element__r.Parent_Element__r.Name  &amp; &apos; - &apos; &amp; Parent_Element__r.Parent_Element__r.Name  &amp; &apos; - &apos; &amp; Parent_Element__r.Name &amp; &apos; - &apos; &amp; Name,
&apos;..&apos; &amp; Name)</formula>
    <label>Long Name</label>
    <type>Text</type>
</CustomField>