force-app/main/default/objects/Orga_HE__c/fields/Parent_Element__c.field-meta.xml
<CustomField>
    <fullName>Parent_Element__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Element</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Parent_Element__c - Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Orga_HE__c.Level__c</field>
            <operation>lessOrEqual</operation>
            <value>4</value>
        </filterItems>
        <filterItems>
            <field>Orga_HE__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Orga_HE__c</referenceTo>
    <relationshipName>Orga_Hierarchy_Elements</relationshipName>
    <type>Lookup</type>
</CustomField>