force-app/main/default/objects/Orga_HE__c/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <label>Path</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>