force-app/main/default/objects/Orga_HE__c/fields/Purchases_DB_Upper_Starting_Point__c.field-meta.xml
<CustomField>
    <fullName>Purchases_DB_Upper_Starting_Point__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Start point for purchases integration (hierarchy Purchases intregration level+1)</description>
    <inlineHelpText>Start point for purchases integration (hierarchy Purchases intregration level+1).</inlineHelpText>
    <label>Purchases DB - Upper Starting Point</label>
    <type>Checkbox</type>
</CustomField>