force-app/main/default/objects/Orga_HE__c/fields/Set_Assortment_Cluster_level__c.field-meta.xml
<CustomField>
    <fullName>Set_Assortment_Cluster_level__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use to filter Org_he lookup in Business Unit object (assortment cluster record type)</description>
    <label>Set Assortment Cluster level</label>
    <type>Checkbox</type>
</CustomField>