force-app/main/default/objects/Orga_HE__c/fields/Set_Assortment_nego_level__c.field-meta.xml
<CustomField>
    <fullName>Set_Assortment_nego_level__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use to filter Org_he lookup in Assortment object</description>
    <label>Set Assortment nego level</label>
    <type>Checkbox</type>
</CustomField>