force-app/main/default/objects/Orga_HE__c/fields/Set_NegoScope_level__c.field-meta.xml
<CustomField>
    <fullName>Set_NegoScope_level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set NegoScope level</label>
    <type>Checkbox</type>
</CustomField>