force-app/main/default/objects/Orga_HE__c/fields/Status_EDate__c.field-meta.xml
<CustomField>
    <fullName>Status_EDate__c</fullName>
    <description>End date of the status</description>
    <label>Status End Date</label>
    <type>Date</type>
</CustomField>