force-app/main/default/objects/Orga_HE__c/fields/URL_logo__c.field-meta.xml
<CustomField>
    <fullName>URL_logo__c</fullName>
    <label>URL logo</label>
    <type>Url</type>
</CustomField>