force-app/main/default/objects/Orga_HE__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Elt_Code__c</columns>
    <columns>Level__c</columns>
    <columns>Status__c</columns>
    <columns>Status_BDate__c</columns>
    <columns>Status_EDate__c</columns>
    <columns>Set_Assortment_Cluster_level__c</columns>
    <columns>Set_Assortment_nego_level__c</columns>
    <columns>Set_Product_link_level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>