force-app/main/default/objects/Orga_HE__c/listViews/Niveau2.listView-meta.xml
<ListView>
    <fullName>Niveau2</fullName>
    <columns>Elt_Code__c</columns>
    <columns>NAME</columns>
    <columns>SPKERCADELACLogoSegm__c</columns>
    <columns>Level__c</columns>
    <columns>Parent_Element__c</columns>
    <columns>KercadelacDisplayOrder__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Orga_HE__c.Product</value>
    </filters>
    <filters>
        <field>Level__c</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>Niveau 2</label>
</ListView>